--- a/index.html
+++ b/index.html
@@ -17,15 +17,26 @@
   </div>
 
   <div class="mode">
-    <label class="toggle" for="dark-mode-btn">
-      <div class="toggle-track">
-        <input type="checkbox" class="toggle-checkbox" id="dark-mode-btn" />
-        <span class="toggle-thumb"></span>
-        <img src="sun.png" alt="" />
-        <img src="moon.png" alt="" />
-      </div>
-    </label>
-  </div>
+  <label class="toggle" for="dark-mode-btn">
+    <div class="toggle-track">
+      <input type="checkbox" class="toggle-checkbox" id="dark-mode-btn" />
+      <span class="toggle-thumb"></span>
+      
+      <!-- Sun Icon (SVG) -->
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" width="20" height="20">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+          d="M12 3v2m0 14v2m9-9h-2M5 12H3m16.364 5.364l-1.414-1.414M6.05 6.05L4.636 4.636m12.728 0l-1.414 1.414M6.05 17.95l-1.414 1.414M12 7a5 5 0 110 10 5 5 0 010-10z" />
+      </svg>
+
+      <!-- Moon Icon (SVG) -->
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" width="20" height="20">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+          d="M21 12.79A9 9 0 1111.21 3a7 7 0 109.79 9.79z" />
+      </svg>
+    </div>
+  </label>
+</div>
+
 
   <div class="container">
     <!-- Input Card -->
